# morphoLogic

./: .gitignore  .gitmodules  KAFKA_TLS_SETUP.md  LICENSE  README.md  handyLines.md  morphoLogic.code-workspace  server_and_client_rules.md
morphoLogicEngine/: README.md  kafka_consumer.py  kafka_producer.py  pyproject.toml  server.py
morphoLogicEngine/config/: settings.json
morphoLogicEngine/deployment/docker/: Dockerfile  docker-compose.yml
morphoLogicEngine/src/morphologic_server/: .env.template  __init__.py  alembic.ini  alembic.template.ini  app.py  awakening.py  cli.py  config.py  exceptions.py  terrain.gltf
morphoLogicEngine/src/morphologic_server/alembic/: env.py
morphoLogicEngine/src/morphologic_server/alembic/versions/: 2025_03_29_2154-c370a0abafd9_create_account_table.py  (+15 more)
morphoLogicEngine/src/morphologic_server/archetypes/: README.md  base.py
morphoLogicEngine/src/morphologic_server/db/: README.md  api.py  engine.py  example_data.py  handlers.py  memory.py  models.py  postgis.md
morphoLogicEngine/src/morphologic_server/game_logic/: commands.py
morphoLogicEngine/src/morphologic_server/network/: gateway.py  gateway_tests.py  kafka.py  messages.py
morphoLogicEngine/src/morphologic_server/scripts/: export_terrain.py  import_terrain.py  seed.py  terrain_palette.py
morphoLogicEngine/src/morphologic_server/services/: context.py  message_handler.py  messages.py
morphoLogicEngine/src/morphologic_server/utils/: async_cmd.py  asyncio_helpers.py  kafka_consumer.py  logger.py  search.py  time_helpers.py
morphoLogicEngine/tests/: test_messages.py
(+56 files in other folders)
