[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morphologic-server"
version = "0.1.0"
description = "Game server for morphoLogic"
authors = [{name = "Moony The Dream", email = "moonchasered@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka",
    "debugpy",
    "sqlalchemy>=2.0.39",
    "GeoAlchemy2>=0.17.1",
    "asyncpg>=0.30.0",
    "alembic>=1.15.1",
    "psycopg>=3.2.6",
    "shapely>=2.1.0",
    "ptpython>=3.0.29",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build]
exclude = ["tests/", "logs/", "*.md"]

# Required if dependencies include direct git repos
# [tool.hatch.metadata]
# allow-direct-references = true

[project.scripts]
morphologic = "morphologic_server.cli:main"